--- a/environment.yml
+++ b/environment.yml
@@ -2,25 +2,37 @@ name: proj1
 channels:
   - defaults
 dependencies:
+  - brotli-python=1.0.9=py312h313beb8_8
   - bzip2=1.0.8=h80987f9_5
   - ca-certificates=2024.3.11=hca03da5_0
+  - certifi=2024.2.2=py312hca03da5_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.1.7=py312hca03da5_0
   - expat=2.5.0=h313beb8_0
   - flask=2.2.5=py312hca03da5_0
+  - flask-sqlalchemy=3.1.1=py312hca03da5_0
+  - greenlet=3.0.1=py312h313beb8_0
+  - idna=3.7=py312hca03da5_0
   - itsdangerous=2.0.1=pyhd3eb1b0_0
   - jinja2=3.1.3=py312hca03da5_0
   - libcxx=14.0.6=h848a8c0_0
   - libffi=3.4.4=hca03da5_0
   - markupsafe=2.1.3=py312h80987f9_0
   - ncurses=6.4=h313beb8_0
-  - openssl=3.0.13=h1a28f6b_0
+  - openssl=3.0.13=h1a28f6b_1
   - pip=23.3.1=py312hca03da5_0
+  - pysocks=1.7.1=py312hca03da5_0
   - python=3.12.2=h99e199e_0
   - readline=8.2=h1a28f6b_0
+  - requests=2.31.0=py312hca03da5_1
   - setuptools=68.2.2=py312hca03da5_0
+  - sqlalchemy=2.0.25=py312h80987f9_0
   - sqlite=3.41.2=h80987f9_0
   - tk=8.6.12=hb8d0fd4_0
+  - typing-extensions=4.9.0=py312hca03da5_1
+  - typing_extensions=4.9.0=py312hca03da5_1
   - tzdata=2024a=h04d1e81_0
+  - urllib3=2.1.0=py312hca03da5_1
   - werkzeug=2.3.8=py312hca03da5_0
   - wheel=0.41.2=py312hca03da5_0
   - xz=5.4.6=h80987f9_0
